--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ dkms.conf
 # Ignore code-workspaces
 *.code-workspace
 
-# compile on_my_machine
+# compile on_my_machine ( a.k.a ejecutubale)
 say_age
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,c
